# yadro_task

./: CMakeLists.txt  README.md  tape.h  tape_impl.cpp  tape_impl.h
src/: CMakeLists.txt  main.cpp  main_conf.in  main_tape.in  tape.h  tape_exception.cpp  tape_exception.h  tape_factory.cpp  tape_factory.h  tape_impl.cpp  tape_impl.h  tape_sorter.h  tape_sorter_impl.cpp  tape_sorter_impl.h
test/: CMakeLists.txt  test.cpp
